data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_857.wast
;; 8. **Invalid Block Type Specification**:    - **Description**: Define a loop block type referencing an invalid or inappropriate function type index, which should fail validation.    - **Constraint Checked**: Block type specification compliance and function type validation.    - **CFG Relevance**: Ensures invalid function type references lead to CFG validation failures, accurately reflecting the loop’s type dependencies.

(assert_invalid
  (module
    (type $incorrect_type (func (param i32) (result f32))) 
    (func 
      (loop (type $incorrect_type) (i32.const 0))
    )
  )
  "type mismatch"
)